added feedback storing and overall feedback logic

--- a/manage-account.html
+++ b/manage-account.html
@@ -34,34 +34,34 @@
             padding-bottom: 1rem;
         }
         #editProfileButton{
-        max-width: 300px; /* Optional: restrict maximum width */    
+        max-width: 300px; 
         
         }
         #reviewRatingButton {
-        width: auto; /* Makes the button fit its content */
-        max-width: 300px; /* Optional: restrict maximum width */
-        display: inline-block; /* Prevents stretching */
-        position: absolute; /* Position it relative to the container */
-        top: 50%; /* Center vertically */
-        right: 1rem; /* Add spacing from the edge */
-        transform: translateY(-50%); /* Adjust for perfect centering */
+        width: auto; 
+        max-width: 300px; 
+        display: inline-block; 
+        position: absolute; 
+        top: 50%; 
+        right: 1rem; 
+        transform: translateY(-50%); 
         }
         .d-flex.flex-column.custombg-bwhite {
-        position: relative; /* Make the container a positioning reference */
+        position: relative; 
         }
         #userProfilePic {
             width: 11rem;
             height: 11rem;
             object-fit: cover;
             border-radius: 50%;
-            position: relative; /* Maintain its relative positioning */
+            position: relative; 
             bottom: -7rem;
-            z-index: 10; /* Higher than the overlapping container */
+            z-index: 10; 
         }
 
         .d-flex.flex-column.custombg-bwhite {
-            position: relative; /* Establish stacking context */
-            z-index: 1; /* Lower than #userProfilePic */
+            position: relative; 
+            z-index: 1; 
         }
                 
       </style>  
@@ -337,8 +337,6 @@
             </div>
           </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script defer src="js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/manage-account.js"></script>              
 </body>
