repositioned recent user listings and added div for feedbacks

--- a/manage-account.html
+++ b/manage-account.html
@@ -176,16 +176,23 @@
                     </div>                    
                 </div>
         
-                <!-- Right Column -->
+                <!-- Feedbacks Column -->
                 <div class="col-7 ps-0 pe-0 custombg-bwhite rounded-top-3">
-                    <h4 class="content-column-first title text-center" style="color:#535353;">Recent Listing</h4>
+                    <h4 class="content-column-first title text-center" style="color:#535353;">Feedbacks</h4>
                     <div class="row">
-                        <div class="d-flex flex-column align-items-center justify-content-center" id="userRecentListing">
+                        <div class="d-flex flex-column align-items-center justify-content-center" id="xxx">
                         </div>
                     </div>
-                  </div>
+                </div>                
             </div>
+            <!-- Recent Book Listings  -->
+            <div class="custombg-bwhite rounded-top-3 pe-3 ps-3 mt-3">
+                <div id="userRecentListing" class="row gx-4 gx-lg-5 pe-3 ps-3 pt-3">
+                    <h4 class="content-column-first title text-center" style="color:#535353;">Recent Book Listings</h4>
+                </div>
+            </div>            
         </div>
+    </div>        
         <!-- Edit Profile Modal -->
         <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel" aria-hidden="true">
             <div class="modal-dialog">
