--- a/manage-account.html
+++ b/manage-account.html
@@ -57,6 +57,7 @@
             position: relative; 
             bottom: -7rem;
             z-index: 10; 
+            background-color: gray;
         }
 
         .d-flex.flex-column.custombg-bwhite {
@@ -121,7 +122,7 @@
     <div class="container p-0 mt-5">
         <!-- Content Header (Profile Pic, User Name) -->
         <div class="d-flex flex-column align-items-center coverheight overflow-visible coverphoto rounded-top-3">
-            <img id="userProfilePic" class="justify-content-end align-items-center" src="images/profileicon.svg" alt="profileicon" style="width: 11rem; height: 11rem; object-fit: cover; border-radius: 50%; position: relative; bottom: -7rem;">
+            <img id="userProfilePic" class="justify-content-end align-items-center" src="" alt="" style="width: 11rem; height: 11rem; object-fit: cover; border-radius: 50%; position: relative; bottom: -7rem;">
         </div>
         <div class="d-flex flex-column custombg-bwhite pt-n1 rounded-bottom-3">
             <button type="button" id="reviewRatingButton" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#reviewModal">Give a Review & Rating</button>
@@ -132,7 +133,7 @@
         </div>        
         <!-- Content Row -->
         <div class="container p-0">
-            <div class="row mt-2 ms-0 me-0" style="gap: 110px;">
+            <div class="row mt-2 ms-0 me-0" style="gap: 10px;">
                 <!-- Left Column -->
                 <div class="col-4 p-0 d-flex flex-column gap-3">
                     <!-- First "About" Section -->
@@ -187,8 +188,8 @@
             </div>
             <!-- Recent Book Listings  -->
             <div class="custombg-bwhite rounded-top-3 pe-3 ps-3 mt-3">
+                <h4 class="content-column-first title text-center" style="color:#535353;">Recent Book Listings</h4>
                 <div id="userRecentListing" class="row gx-4 gx-lg-5 pe-3 ps-3 pt-3">
-                    <h4 class="content-column-first title text-center" style="color:#535353;">Recent Book Listings</h4>
                 </div>
             </div>            
         </div>
