--- a/manage-account.html
+++ b/manage-account.html
@@ -180,10 +180,8 @@
                 <!-- Feedbacks Column -->
                 <div class="col-7 ps-0 pe-0 custombg-bwhite rounded-top-3">
                     <h4 class="content-column-first title text-center" style="color:#535353;">Feedbacks</h4>
-                    <div class="row">
-                        <div class="d-flex flex-column align-items-center justify-content-center" id="xxx">
+                        <div class="ms-2" id="userFeedbacks">
                         </div>
-                    </div>
                 </div>                
             </div>
             <!-- Recent Book Listings  -->
