added info alert

--- a/sellingform.html
+++ b/sellingform.html
@@ -63,9 +63,14 @@
         </div>
     </div>
 </nav>
+<div class="d-flex justify-content-center mt-5 p-0">
+    <div class="alert alert-info text-center" role="alert">
+        <h4 class="p-0 m-0">Subscribe now to remove book listing limit and unlock other features! <a href="#" class="alert-link" style="text-decoration: none;">Click Here</a></h4>
+    </div>
+</div>
 <!-- GCash Form Fill-Up Section -->
-<section id="gcash-setup-section" class="h-100 h-custom gradient-custom-2 d-none">
-    <div class="container py-5 h-100">
+<section id="gcash-setup-section">
+    <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12">
                 <div class="card card-registration" style="border-radius: 15px;">
@@ -102,8 +107,8 @@
 </section>
 
  <!-- Book Form Fill-Up Section -->
- <section id="book-listing-section" class="h-100 h-custom gradient-custom-2 d-none">
-    <div class="container py-5 h-100">
+ <section id="book-listing-section">
+    <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12">                  
                 <div class="card card-registration" style="border-radius: 15px;">
