--- a/manage-account.html
+++ b/manage-account.html
@@ -124,13 +124,28 @@
         <div class="d-flex flex-column align-items-center coverheight overflow-visible coverphoto rounded-top-3">
             <img id="userProfilePic" class="justify-content-end align-items-center" src="" alt="" style="width: 11rem; height: 11rem; object-fit: cover; border-radius: 50%; position: relative; bottom: -7rem;">
         </div>
-        <div class="d-flex flex-column custombg-bwhite pt-n1 rounded-bottom-3">
-            <button type="button" id="reviewRatingButton" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#reviewModal">Give a Review & Rating</button>
-            <h1 id="userFullName" class="h3 text-center mb-2" style="color:#535353;"></h1>
-                <div class="text-center">
-                    <button id="editProfileButton" type="button" class="btn btn-info mx-auto" data-bs-toggle="modal" data-bs-target="#editProfileModal">Edit Profile</button>
-                </div>              
-        </div>        
+        <!-- Username & Give Review and Rating -->
+        <div class="d-flex flex-column custombg-bwhite pt-n1 rounded-bottom-3 position-relative">
+            <button type="button" id="reviewRatingButton" class="btn btn-warning end-0" style="margin-right: 7px;" data-bs-toggle="modal" data-bs-target="#reviewModal">Give a Review & Rating</button>
+            <h1 id="userFullName" class="h3 text-center mb-0" style="color:#535353;"></h1>
+            <!-- Verify Now Button -->
+            <div id="verifyButtonContainer" class="d-flex align-items-center justify-content-center mt-2">
+                <button id="verifyButton" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#verificationModal">
+                    Verify Now
+                </button>
+            </div>
+
+            <!-- Verified Customer Badge -->
+            <div id="customerStatusContainer" class="d-flex align-items-center justify-content-center mt-2 d-none">
+                <div class="customer_badge me-2">
+                    <img src="https://cdn.shopify.com/s/files/1/0566/8241/4246/t/11/assets/icon-verified-1662629893290.png?v=1662629894" alt="Verified Badge" style="width: 21px; height: 24px;">
+                </div>
+                <div class="customer_status_content" style="color: rgb(91, 191, 138);">Verified Seller</div>
+            </div>
+            <!-- Edit Profile Button -->
+            <button id="editProfileButton" type="button" class="btn btn-primary position-absolute top-0 end-0 m-2" data-bs-toggle="modal" data-bs-target="#editProfileModal">Edit Profile</button>
+        </div>
+      
         <!-- Content Row -->
         <div class="container p-0">
             <div class="row mt-2 ms-0 me-0" style="gap: 10px;">
@@ -347,7 +362,68 @@
               </div>
             </div>
           </div>
-
+          <!-- Verification Modal -->
+            <div class="modal fade" id="verificationModal" tabindex="-1" aria-labelledby="verificationModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="verificationModalLabel">Verification Form</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <!-- Modal Body -->
+                        <div class="modal-body">
+                            <form id="verificationForm">
+                                <!-- Full Name -->
+                                <div class="mb-3">
+                                    <label for="fullName" class="form-label">Full Name</label>
+                                    <input type="text" class="form-control" id="fullName" placeholder="Enter your full name" required>
+                                </div>
+                                <!-- Full Address -->
+                                <div class="mb-3">
+                                    <label for="fullAddress" class="form-label">Full Address</label>
+                                    <input type="text" class="form-control" id="fullAddress" placeholder="Enter your full address" required>
+                                </div>                                
+                                <!-- Date of Birth -->
+                                <div class="mb-3">
+                                    <label for="dob" class="form-label">Date of Birth</label>
+                                    <input type="date" class="form-control" id="dob" required>
+                                </div>
+                                <!-- Government-Issued ID Type -->
+                                <div class="mb-3">
+                                    <label for="idType" class="form-label">ID Type</label>
+                                    <select class="form-select" id="idType" required>
+                                        <option value="" disabled selected>Select ID Type</option>
+                                        <option value="Driver's License">Driver's License</option>
+                                        <option value="Passport">Passport</option>
+                                        <option value="National ID">National ID</option>
+                                    </select>
+                                </div>
+                                <!-- ID Number -->
+                                <div class="mb-3">
+                                    <label for="idNumber" class="form-label">ID Number</label>
+                                    <input type="text" class="form-control" id="idNumber" placeholder="Enter ID number" required>
+                                </div>
+                                <!-- Upload ID -->
+                                <div class="mb-3">
+                                    <label for="idUpload" class="form-label">Upload a Clear Copy of the ID</label>
+                                    <input type="file" class="form-control" id="idUpload" accept="image/*,application/pdf" required>
+                                </div>
+                                <!-- Upload Selfie -->
+                                <div class="mb-3">
+                                    <label for="selfieUpload" class="form-label">Upload a Selfie holding the ID</label>
+                                    <input type="file" class="form-control" id="selfieUpload" accept="image/*,application/pdf" required>
+                                </div>                                
+                            </form>
+                        </div>
+                        <!-- Modal Footer -->
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary" form="verificationForm">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
     <script defer src="js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/manage-account.js"></script>              
 </body>
