added subscription logic

--- a/manage-account.html
+++ b/manage-account.html
@@ -126,7 +126,7 @@
         </div>
         <!-- Username & Give Review and Rating -->
         <div class="d-flex flex-column custombg-bwhite pt-n1 rounded-bottom-3 position-relative">
-            <button type="button" id="reviewRatingButton" class="btn btn-warning end-0" style="margin-right: 7px;" data-bs-toggle="modal" data-bs-target="#reviewModal">Give a Review & Rating</button>
+            <button type="button" id="reviewRatingButton" class="btn btn-warning end-0 mt-3" style="margin-right: 7px;" data-bs-toggle="modal" data-bs-target="#reviewModal">Give a Review & Rating</button>
             <h1 id="userFullName" class="h3 text-center mb-0" style="color:#535353;"></h1>
             <!-- Verify Now Button -->
             <div id="verifyButtonContainer" class="d-flex align-items-center justify-content-center mt-2">
