--- a/sellingform.html
+++ b/sellingform.html
@@ -63,7 +63,7 @@
         </div>
     </div>
 </nav>
-<div class="d-flex justify-content-center mt-5 p-0">
+<div class="d-flex justify-content-center mt-5 p-0 d-none" id="subscribeAlert">
     <div class="alert alert-info text-center" role="alert">
         <h4 class="p-0 m-0">Subscribe now to remove book listing limit and unlock other features! <a href="subscribe.html" class="alert-link" style="text-decoration: none;">Click Here</a></h4>
     </div>
