--- a/manageusers.html
+++ b/manageusers.html
@@ -8,89 +8,171 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://cdn.jsdelivr.net/npm/simple-datatables-classic@latest/dist/style.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="css/adminstyles.css" />
+<script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="css/manageusers.css">
 </head>
-<body>
-<div class="container-xl">
-    <div class="table-responsive">
-        <div class="table-wrapper">
-            <div class="table-title bg-dark">
-                <div class="row">
-                    <div class="col-sm-5">
-                        <h2>User <b>Management</b></h2>
-                    </div>
-                    <div class="col-sm-7">
-                        <a href="#" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span>Add New User</span></a>
-                        <a href="#" class="btn btn-secondary"><i class="material-icons">&#xE24D;</i> <span>Export to Excel</span></a>						
+<body class="sb-nav-fixed">
+    <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <!-- Navbar Brand-->
+        <a class="navbar-brand ps-3" href="admin.html">Back to Dashboard</a>
+        <!-- Sidebar Toggle-->
+        <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+        <!-- Navbar (aligned to the right) -->
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-user fa-fw"></i>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                    <li><a id="logoutButton" class="dropdown-item" href="#!">Logout</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    
+    <div id="layoutSidenav">
+        <div id="layoutSidenav_nav">
+            <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                <div class="sb-sidenav-menu">
+                    <div class="nav">
+                        <div class="sb-sidenav-menu-heading">Core</div>
+                        <a class="nav-link" href="admin.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Dashboard
+                        </a>
+                        <div class="sb-sidenav-menu-heading">Addons</div>
+                        <a class="nav-link" href="manageusers.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                            Manage Users
+                        </a>
+                        <a class="nav-link" href="managetransactions.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                            Manage Transactions
+                        </a>
                     </div>
                 </div>
-            </div>
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Name</th>						
-                        <th>Date Created</th>
-                        <th>Role</th>
-                        <th>Status</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td><a href="#"><img src="/examples/images/avatar/1.jpg" class="avatar" alt="Avatar"> Michael Holz</a></td>
-                        <td>04/10/2013</td>                        
-                        <td>Admin</td>
-                        <td><span class="status text-success">&bull;</span> Verified</td>
-                        <td>
-                            <a href="#" class="settings" title="Settings" data-toggle="tooltip"><i class="material-icons">&#xE8B8;</i></a>
-                            <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE5C9;</i></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td><a href="#"><img src="/examples/images/avatar/2.jpg" class="avatar" alt="Avatar"> Paula Wilson</a></td>
-                        <td>05/08/2014</td>                       
-                        <td>Publisher</td>
-                        <td><span class="status text-warning">&bull;</span> Pending Verification</td>
-                        <td>
-                            <a href="#" class="settings" title="Settings" data-toggle="tooltip"><i class="material-icons">&#xE8B8;</i></a>
-                            <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE5C9;</i></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td><a href="#"><img src="/examples/images/avatar/3.jpg" class="avatar" alt="Avatar"> Antonio Moreno</a></td>
-                        <td>11/05/2015</td>
-                        <td>Publisher</td>
-                        <td><span class="status text-danger">&bull;</span> Not Verified</td>                        
-                        <td>
-                            <a href="#" class="settings" title="Settings" data-toggle="tooltip"><i class="material-icons">&#xE8B8;</i></a>
-                            <a href="#" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE5C9;</i></a>
-                        </td>                        
-                    </tr>
-                </tbody>
-            </table>
-            <div class="clearfix">
-                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-                <ul class="pagination">
-                    <li class="page-item disabled"><a href="#">Previous</a></li>
-                    <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item"><a href="#" class="page-link">3</a></li>
-                    <li class="page-item"><a href="#" class="page-link">4</a></li>
-                    <li class="page-item"><a href="#" class="page-link">5</a></li>
-                    <li class="page-item"><a href="#" class="page-link">Next</a></li>
-                </ul>
-            </div>
+                <div class="sb-sidenav-footer">
+                    <div class="small">Logged in as:</div>
+                    Overview
+                </div>
+            </nav>
         </div>
-    </div>
-</div>
-<script type="module" src="js/admin.js"></script>     
+        <div id="layoutSidenav_content">
+            <main>
+                <div class="container-xl">
+                    <div class="table-responsive">
+                        <div class="table-wrapper">
+                            <div class="table-title bg-dark">
+                                <div class="row">
+                                    <div class="col-sm-5">
+                                        <h2>User <b>Management</b></h2>
+                                    </div>
+                                    <div class="col-sm-7">
+                                        <a href="#" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span>Add New User</span></a>
+                                        <a href="#" class="btn btn-secondary"><i class="material-icons">&#xE24D;</i> <span>Export to Excel</span></a>						
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Add an ID to your table -->
+                            <table id="userTable" class="table table-striped table-hover">
+                                <thead>
+                                    <tr>
+
+                                        <th>Name</th>
+                                        <th>Date Created</th>
+                                        <th>Role</th>
+                                        <th>Verified Status</th>
+                                        <th>Subscription Status</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <!-- Rows will be inserted dynamically here -->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <!-- Modal -->
+                <div class="modal fade" id="userVerifyDetailsModal" tabindex="-1" aria-labelledby="userDetailsModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="userDetailsModalLabel">User Details</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <!-- ID Image Preview -->
+                                <div class="mb-3 text-center">
+                                    <label for="idImagePreview" class="form-label"><strong>ID Image Preview</strong></label>
+                                    <div class="d-flex justify-content-center">
+                                        <img id="idImagePreview" src="" alt="ID Image" class="img-fluid" style="width: 236px; object-fit: cover;">
+                                    </div>
+                                </div>
+
+                                <!-- ID Type -->
+                                <div class="mb-3">
+                                    <label for="idType" class="form-label"><strong>ID Type: </strong></label>
+                                    <span id="idType"></span>
+                                </div>
+
+                                <!-- ID Number -->
+                                <div class="mb-3">
+                                    <label for="idNumber" class="form-label"><strong>ID Number: </strong></label>
+                                    <span id="idNumber"></span>
+                                </div>
+
+                                <!-- Selfie Image Preview -->
+                                <div class="mb-3 text-center">
+                                    <label for="selfieImagePreview" class="form-label"><strong>Selfie Image Preview</strong></label>
+                                    <div class="d-flex justify-content-center">
+                                        <img id="selfieImagePreview" src="" alt="Selfie Image" class="img-fluid" style="width: 236px; object-fit: cover;">
+                                    </div>
+                                </div>
+
+                                <!-- Full Name -->
+                                <div class="mb-3">
+                                    <label for="fullName" class="form-label"><strong>Full Name: </strong></label>
+                                    <span id="fullName"></span>
+                                </div>
+
+                                <!-- Full Address -->
+                                <div class="mb-3">
+                                    <label for="fullAddress" class="form-label"><strong>Full Address: </strong></label>
+                                    <span id="fullAddress"></span>
+                                </div>
+
+                                <!-- Date of Birth -->
+                                <div class="mb-3">
+                                    <label for="dob" class="form-label"><strong>Date of Birth: </strong></label>
+                                    <span id="dob"></span>
+                                </div>
+                                <!-- Input Field Example -->
+                                <div class="mb-3">
+                                    <label for="verificationNotes" class="form-label"><strong>Verification Notes: </strong></label>
+                                    <input type="text" class="form-control" id="verificationNotes" placeholder="Enter any additional notes...">
+                                </div>                                
+                            </div>
+                            <div class="modal-footer">
+                                <!-- Submit Button -->
+                                <button type="button" class="btn btn-primary" id="submitButton">Approve</button>
+                                <!-- Close Button -->
+                                <button type="button" class="btn btn-secondary" id="rejectButton">Reject</button>                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/simple-datatables-classic@latest" type="text/javascript"></script>
+<script type="module" src="js/admin.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="js/scripts.js"></script>  
 <script type="module" src="js/manageusers.js"></script>    
 </body>
 </html>
