--- a/manageusers.html
+++ b/manageusers.html
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Modal -->
+                <!-- Verification Preview Modal -->
                 <div class="modal fade" id="userVerifyDetailsModal" tabindex="-1" aria-labelledby="userDetailsModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
@@ -163,6 +163,62 @@
                                 <button type="button" class="btn btn-primary" id="submitButton">Approve</button>
                                 <!-- Close Button -->
                                 <button type="button" class="btn btn-secondary" id="rejectButton">Reject</button>                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Subscription Preview Modal -->
+                <div class="modal fade" id="userSubscribeDetailsModal" tabindex="-1" aria-labelledby="transactionDetailsModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="transactionDetailsModalLabel">Transaction Details</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <!-- Image URL Preview -->
+                                <div class="mb-3 text-center">
+                                    <label for="imageUrlPreview" class="form-label"><strong>Transaction Image Preview</strong></label>
+                                    <div class="d-flex justify-content-center">
+                                        <img id="imageUrlPreview" src="" alt="Transaction Image" class="img-fluid" style="width: 236px; object-fit: cover;">
+                                    </div>
+                                </div>
+                
+                                <!-- Transaction Reference Number -->
+                                <div class="mb-3">
+                                    <label for="transactionReference" class="form-label"><strong>Transaction Reference Number: </strong></label>
+                                    <span id="transactionReference"></span>
+                                </div>
+                                <!-- Input Field Example -->
+                                <div class="mb-3">
+                                    <label for="subscriptionNotes" class="form-label"><strong>Subscription Notes: </strong></label>
+                                    <input type="text" class="form-control" id="subscriptionNotes" placeholder="Enter any additional notes...">
+                                </div>                                 
+                
+                            </div>
+                            <div class="modal-footer">
+                                <!-- Approve Button -->
+                                <button type="button" class="btn btn-primary" id="subApproveButton">Approve</button>
+                                <!-- Reject Button -->
+                                <button type="button" class="btn btn-secondary" id="subRejectButton">Reject</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Confirmation Modal -->
+                <div class="modal fade" id="deleteUserModal" tabindex="-1" aria-labelledby="deleteUserModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="deleteUserModalLabel">Confirm Deletion</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Are you sure you want to delete this user? This action cannot be undone.
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Yes, Delete</button>
                             </div>
                         </div>
                     </div>
